Se agregaron botones para redes sociales

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
     
     <footer>
         <span>Todos lo derechos reservados</span>
-        <button>Sigueme</button>
+        <button>Sigueme en facebook</button>
+        <button>Sigueme en Youtube</button>
     </footer>
 
     
